Setting up templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
             <ul>
               <li><a href="{% url "sign-in" %}">Sign In</a></li>
               <li><a href="{% url "sign-up" %}">Sign Up</a></li>
+              <li><a href="{% url "log-out" %}">Log Out</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto bg-success p-2" href="{% url "contact-us" %}">Contact</a></li>
