--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -4,6 +4,19 @@
 
 {% block content %}
 
-About Us
+<div class="login-container">
+    <h2>Login</h2>
+    <form action="/login" method="post">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">Login</button>
+    </form>
+</div>
 
 {% endblock content %}
