--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 {% block title %}Home{% endblock title %}
 
+{% block main %}
+<h1>Welcome</h1>  
+{% endblock main %}
+
 {% block content %}
 
 
