--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,28 @@
 {% block title %}Home{% endblock title %}
 
 {% block main %}
-<h1>Welcome</h1>  
+
+<div class="login-container">
+  <form action="auth/sign-up.html" method="post">
+    {% csrf_token %}
+    <h3 style="color: black;">SignUp</h3>
+      <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required>
+      </div>
+      <div class="form-group">
+          <label for="conf-password">Confirm Password</label>
+          <input type="conf-password" id="conf-password" name="conf-password" required>
+      </div>
+      <button type="submit">SignUp</button>
+  </form>
+  <p>Already a user ? <a href="{% url "sign-in" %}">LogIn</p>
+</div>
+
 {% endblock main %}
 
 {% block content %}
