--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 {% block main %}
 
 <div class="login-container">
-  <form action="auth/sign-up.html" method="post">
+
+  <form action="{% url "sign-up" %}" method="POST">
     {% csrf_token %}
     <h3 style="color: black;">SignUp</h3>
       <div class="form-group">
@@ -18,11 +19,13 @@
       </div>
       <div class="form-group">
           <label for="conf-password">Confirm Password</label>
-          <input type="conf-password" id="conf-password" name="conf-password" required>
+          <input type="password" id="conf-password" name="conf-password" required>
       </div>
       <button type="submit">SignUp</button>
   </form>
+
   <p>Already a user ? <a href="{% url "sign-in" %}">LogIn</p>
+
 </div>
 
 {% endblock main %}
