--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2012,21 +2012,12 @@ section {
 }
 
 
-
-
-
-.login-container {
+.form-container {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 300px;
-}
-
-h2 {
-  margin-bottom: 20px;
-  text-align: center;
-  color: #333;
 }
 
 .form-group {
@@ -2048,7 +2039,7 @@ input[type="password"] {
   box-sizing: border-box;
 }
 
-button {
+.form-btn {
   width: 100%;
   padding: 10px;
   background-color: #4CAF50;
@@ -2059,6 +2050,6 @@ button {
   font-size: 16px;
 }
 
-button:hover {
+.form-btn:hover {
   background-color: #45a049;
 }
