--- a/templates/index.html
+++ b/templates/index.html
@@ -2,36 +2,15 @@
 
 {% block title %}Home{% endblock title %}
 
+
 {% block main %}
 
-<div class="login-container">
-
-  <form action="{% url "sign-up" %}" method="POST">
-    {% csrf_token %}
-    <h3 style="color: black;">SignUp</h3>
-      <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
-      </div>
-      <div class="form-group">
-          <label for="conf-password">Confirm Password</label>
-          <input type="password" id="conf-password" name="conf-password" required>
-      </div>
-      <button type="submit">SignUp</button>
-  </form>
-
-  <p>Already a user ? <a href="{% url "sign-in" %}">LogIn</p>
-
-</div>
+<h1>Welcome To Our Store</h1>
 
 {% endblock main %}
 
-{% block content %}
 
+{% block content %}
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
