Working on contact us and product page

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -4,6 +4,15 @@
 
 {% block content %}
 
-About Us
+<h1 class="text-center">Contact Us</h1>
+
+<div class="container mt-2">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6"></div>
+        <div class="col-md-9"></div>
+    </div>
+</div>
+
 
 {% endblock content %}
