--- a/templates/auth/reg_forms.html
+++ b/templates/auth/reg_forms.html
@@ -53,31 +53,27 @@
             <button type="submit" class="form-btn">SignUp</button>
         </form>
 
-        {% comment %} <div class="form-container">
-
-        <form action="{% url "sign-up" %}" method="POST">
-            {% csrf_token %}
-            <h3 style="color: black;">SignUp</h3>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <label for="conf-password">Confirm Password</label>
-                <input type="password" id="conf-password" name="conf-password" required>
-            </div>
-            <button type="submit" class="form-btn">SignUp</button>
-        </form> {% endcomment %}
-
         <p>Already a user ? <a href="{% url "sign-in" %}">LogIn</p>
 
         </div>
 
+    {% elif load_form == "contact-us" %}
+
+        <div class="form-container">
+
+            <form action="{% url "contact-us" %}" method="POST">
+                {% csrf_token %}
+                <h3 style="color: black;">Contact Us</h3>
+                <div class="form-group">
+                    {{form}}
+                </div>
+                <button type="submit" class="form-btn">Submit</button>
+            </form>
+
+        </div>
+
     {% endif %}
+
 {% endblock main %}
 
 
