--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
           <div class="row portfolio-container">
   
             {% for product in products %}
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <img src="static/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app" height=300px>
+                <img src="media/{{product.image}}" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>{{product.name}}</h4>
                   <p>{{product.category}}</p>
