--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,11 @@
         <div class="container">
   
           <div class="section-title">
-            <h2>Portfolio</h2>
-            <h3>Check our <span>Portfolio</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+            <h2>Products</h2>
+            <h3>Check our <span>Products</span></h3>
           </div>
   
-          <div class="row">
+          {% comment %} <div class="row">
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
@@ -31,7 +30,7 @@
                 <li data-filter=".filter-web">Web</li>
               </ul>
             </div>
-          </div>
+          </div> {% endcomment %}
   
           <div class="row portfolio-container">
   
