--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -11,8 +11,8 @@
         <div class="col-md-6">
             <h1>
                 {{ product.name }} <br>
-                <small>{{ product.category }}</small> <br>
-                <strong>₹{{ product.price }}</strong> <br>
+                <strong>At ₹{{ product.price }}</strong> <br>
+                <!-- <small>{{ product.category }}</small> <br> -->
                 <p>{{ product.desc }}</p>
             </h1>
             <form action="{% url 'add_to_cart' product.id %}" method="post">
